# practice-ros

./: README.md
catkin/: Makefile
cpp-publisher/: CMakeLists.txt  package.xml
cpp-publisher/src/: main.cpp
python-subscriber/: CMakeLists.txt  package.xml
python-subscriber/src/: main.py
